--- a/#src/index.html
+++ b/#src/index.html
@@ -85,7 +85,8 @@
                     </svg>
                 </div>
                 <div class="header__image-item">
-                    <svg viewBox="0 0 450 554" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg viewBox="0 0 450 554" fill="none"  xmlns="http://www.w3.org/2000/svg" filter="blur(10px)">
+                        
                         <g filter="url(#filter0_d)">
                         <ellipse cx="248.684" cy="261.178" rx="98.3217" ry="106.195" transform="rotate(30 248.684 261.178)" fill="#252525"/>
                         </g>
@@ -541,7 +542,6 @@
 
 
 	<div class="skills__tabs">
-		<!-- Вкладки на CSS -->
 		<div class="skills__container">
 
             <label class="skill__tab skills__active" title="Вкладка 1">Web разработка</label>
@@ -549,10 +549,6 @@
             <label class="skill__tab" title="Вкладка 3">Продвижение</label>
             <label class="skill__tab " title="Вкладка 4">Продюсерский центр</label>
         </div>
-
-		<!-- Вкладки на JS -->
-		<!--<label class="tab skills__active" title="Вкладка 1">Авторизация</label>-->
-		<!--<label class="tab " title="Вкладка 2">Регистрация</label>-->
 
 		<div class="skills__content">
             <div id="form-1" class="skill__tab-form skills__active">
