--- a/#src/seotraff.html
+++ b/#src/seotraff.html
@@ -61,7 +61,7 @@
                 <div class="s-header__info-text">Увидим то, что сможет перевернуть игру <br>и выйти на новый уровень</div>
                 <div class="s-header__info-btn-container">
                     <a href="#">
-                        <button class="s-header__info-btn">Найти точки роста
+                        <button class="s-header__info-btn">Start проекта
                             <span class="s-header__info-btn-right"></span>
                             <span class="s-header__info-btn-right btn-right-after"></span>
                         </button>
