--- a/#src/contact.html
+++ b/#src/contact.html
@@ -130,30 +130,32 @@
         <div class="k-map__block">
             <div class="k-map__block-title">
                 <p>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Осуществляем <br>
+                                                Осуществляем <br>
                     полный цикл веб-разработки <br>
                     от технического задания <br>
                     и SEO-стратегии <br>
                     до контента 
                 </p>
-            </div>
-            <div class="k-map__block-blocks">
-                <div class="k-map__block-blocks-add">
-                    Карта
-                </div>
-                <div class="k-map__block-blocks-text">
-                    наша локация
+                <div class="k-map__block-blocks">
+                    <div class="k-map__block-blocks-add">
+                        Карта
+                    </div>
+                    <div class="k-map__block-blocks-text">
+                        наша локация
+                    </div>
                 </div>
             </div>
             <div class="k-map__block-maps">
                 <img src="./img/map.png" alt="">
             </div>
-            <div class="k-map__block-adds">Поддержка</div>
-            <div class="k-map__block-text">Для срочных <br>вопросов</div>
-            <div class="k-map__block-phone">+7 (499) 344-97-77</div>
-            <div class="k-map__block-email">
-                <div class="k-map__block-email-add">Поддержка</div>
-                <div class="k-map__block-email-text">your@bpump.ru</div>
+            <div class="k-map__info">
+                <div class="k-map__block-adds">Поддержка</div>
+                <div class="k-map__block-text">Для срочных <br>вопросов</div>
+                <div class="k-map__block-phone">+7 (499) 344-97-77</div>
+                <div class="k-map__block-email">
+                    <div class="k-map__block-email-add">Поддержка</div>
+                    <div class="k-map__block-email-text">your@bpump.ru</div>
+                </div>
             </div>
         </div>
 </section>
@@ -168,7 +170,7 @@
                 <div class="k-team__text-number-slash">/</div>
             </div>
             <div class="k-team__text-block">
-                <div class="k-team__text-name">Команда</div>
+                <div class="k-team__text-name">Агенство</div>
                 <div class="k-team__text-blocks">dream k-team</div>
             </div>
         </div>
