--- a/#src/design.html
+++ b/#src/design.html
@@ -99,6 +99,7 @@
             <ul class="d-new__content-list">
                 <li class="d-new__content-item-m">
                     <img src="./img/design-1.png" alt="" class="d-new__content-imgs">
+                    <div class="d-new__content-fon"></div>
                     <div class="d-new__content-block-m">
                         <div class="d-new__content-item-date-m">16.05.21</div>
                         <div class="d-new__content-item-title-m">Разработка нового  дизайна и нового сайта</div>
