--- a/#src/detail-1.html
+++ b/#src/detail-1.html
@@ -142,9 +142,10 @@
     <canvas class="grain-4"></canvas>
     <div class="container">
         <div class="dt-process__text">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Модульные 
+                                       Модульные 
             решения для коммерции 
-            и жизни на базе морских контейнеров. 
+            и жизни на базе морских 
+            контейнеров. 
         </div>
         <div class="dt-process__block">
             <div class="dt-process__block-text">
