--- a/#src/new.html
+++ b/#src/new.html
@@ -127,6 +127,7 @@
             </div>
             <div class="n-header__new-6">
                 <img src="./img/new-2.png" alt="" class="n-header__new-6-img">
+                <div class="n-header__new-fon"></div>
                 <div class="n-header__new-6-blocks">
                         <div class="n-header__new-6-date">16.05.21</div>
                         <div class="n-header__new-6-title">Разработка нового дизайна и нового сайта</div>
@@ -146,6 +147,7 @@
             </div>
             <div class="n-header__new-8">
                 <img src="./img/new-2.png" alt="" class="n-header__new-8-img">
+                <div class="n-header__new-fon"></div>
                 <div class="n-header__new-8-blocks">
                         <div class="n-header__new-8-date">16.05.21</div>
                         <div class="n-header__new-8-title">Разработка нового дизайна и нового сайта</div>
