--- a/#src/seotraff.html
+++ b/#src/seotraff.html
@@ -381,6 +381,10 @@
                         Запуск продвижения</div>
                     <div class="seo-price__block-price">45 000₽</div>
                     <div class="seo-price__block-add">в месяц</div>
+                    <div class="seo-price__block-media">
+                        <div class="seo-price__block-price-media">45 000₽</div>
+                        <div class="seo-price__block-add-media">в месяц</div>
+                    </div>
                 </li>
                 <li class="seo-price__block-item">
                     <div class="seo-price__block-key">150 КЛЮЧЕЙ</div>
@@ -391,6 +395,10 @@
                         Запуск продвижения</div>
                     <div class="seo-price__block-price">85 000₽</div>
                     <div class="seo-price__block-add">в месяц</div>
+                    <div class="seo-price__block-media">
+                        <div class="seo-price__block-price-media">45 000₽</div>
+                        <div class="seo-price__block-add-media">в месяц</div>
+                    </div>
                 </li>
                 <li class="seo-price__block-item">
                     <div class="seo-price__block-key">500 КЛЮЧЕЙ</div>
@@ -401,6 +409,10 @@
                         Запуск продвижения</div>
                     <div class="seo-price__block-price">150 000₽</div>
                     <div class="seo-price__block-add">в месяц</div>
+                    <div class="seo-price__block-media">
+                        <div class="seo-price__block-price-media">45 000₽</div>
+                        <div class="seo-price__block-add-media">в месяц</div>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -417,17 +429,29 @@
                 результат СЕОпродвижения ?</div>
             <ul class="seo-result__block-list">
                 <li class="seo-result__block-item">
+                    <div class="seo-result__block-media">
+                        <div class="seo-result__block-number-media">1</div>
+                        <div class="seo-result__block-text-media">Первые результаты</div>
+                    </div>
                     <div class="seo-result__block-number">1</div>
                     <div class="seo-result__block-text">Первые результаты</div>
                     <div class="seo-result__block-add">На второй месяц продвижения, около 15% низкочастотных 
                         и среднечастотных запросов попадают в топ 10.</div>
                 </li>
                 <li class="seo-result__block-item">
+                    <div class="seo-result__block-media">
+                        <div class="seo-result__block-number-media">1</div>
+                        <div class="seo-result__block-text-media">Первые результаты</div>
+                    </div>
                     <div class="seo-result__block-number">2</div>
                     <div class="seo-result__block-text">Активный рост</div>
                     <div class="seo-result__block-add">Уже на четвертый месяц нашей работы, более 50% гарантированно занимают топовые позиции.</div>
                 </li>
                 <li class="seo-result__block-item">
+                    <div class="seo-result__block-media">
+                        <div class="seo-result__block-number-media">1</div>
+                        <div class="seo-result__block-text-media">Первые результаты</div>
+                    </div>
                     <div class="seo-result__block-number">3</div>
                     <div class="seo-result__block-text">Результат ТОП 3</div>
                     <div class="seo-result__block-add">Ближе к шестому месяцу продвижения, более 87% запросов занимают позиции ТОП 1-3. Вы получаете долгожданный трафик.</div>
@@ -502,6 +526,12 @@
                         </div>
                     </div>
                 </div>
+        </div>
+        <div class="seo-new__text-controls-media">
+            <div class="swiper-controls-seo">
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
         </div>
     </div>
 </section>
