--- a/#src/ceo.html
+++ b/#src/ceo.html
@@ -12,24 +12,22 @@
     <!-- Стили -->
     <link rel="stylesheet" href="css/style.min.css">
 
-        <!-- Библиотеки анимации WOW -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css"/>
-        <script src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js"></script>
+    <!-- Библиотеки анимации WOW -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css"/>
+    <script src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js"></script>
 
-        <!-- Библиотеки анимации GSAP -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- Библиотеки анимации GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-        <!-- Дополнительные инструменты -->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Дополнительные инструменты -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-        <!-- Слайдер - стили .css -->
-        <!-- <link rel="stylesheet" href="add/swiper 6.4.5.css"> -->
-        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!-- Слайдер - стили .css -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
-        <!-- Слайдер - скрипты .js -->
-        <!-- <script src="add/swiper 6.4.5.js"></script> -->
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Слайдер - скрипты .js -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <body>
 <section class="ceo-header"> 
@@ -232,16 +230,28 @@
                 <li class="ceo-result__block-item">
                     <div class="ceo-result__block-number">1</div>
                     <div class="ceo-result__block-text">Меньше расходы</div>
+                    <div class="ceo-result__block-media">
+                        <div class="ceo-result__block-number-media">1</div>
+                        <div class="ceo-result__block-text-media">Меньше расходы</div>
+                    </div>
                     <div class="ceo-result__block-add">Мы найдём куда вы тратите деньги впустую. Какие запросы бесполезно продвигать.</div>
                 </li>
                 <li class="ceo-result__block-item">
                     <div class="ceo-result__block-number">2</div>
                     <div class="ceo-result__block-text">Ошибки в СЕО</div>
+                    <div class="ceo-result__block-media">
+                        <div class="ceo-result__block-number-media">2</div>
+                        <div class="ceo-result__block-text-media">Ошибки в СЕО</div>
+                    </div>
                     <div class="ceo-result__block-add">Перечислим все проблемы, которые мешают вашему сайту идти в топ поисковых систем.</div>
                 </li>
                 <li class="ceo-result__block-item">
                     <div class="ceo-result__block-number">3</div>
                     <div class="ceo-result__block-text">Чистый трафик</div>
+                    <div class="ceo-result__block-media">
+                        <div class="ceo-result__block-number-media">3</div>
+                        <div class="ceo-result__block-text-media">Чистый трафик</div>
+                    </div>
                     <div class="ceo-result__block-add">Покажем как привести чистый органический и целевой трафик. Количество заказов возрастёт</div>
                 </li>
             </ul>
@@ -272,6 +282,10 @@
                         Сверка 50 посадочных страниц</div>
                     <div class="ceo-price__block-price">5 900₽</div>
                     <div class="ceo-price__block-add">Срок 3 рабочих дня.</div>
+                    <div class="ceo-price__block-media">
+                        <div class="ceo-price__block-price-media">5 900₽</div>
+                        <div class="ceo-price__block-add-media">Срок 3 рабочих дня.</div>
+                    </div>
                 </li>
                 <li class="ceo-price__block-item">
                     <div class="ceo-price__block-key">РАСШИРЕННЫЙ</div>
@@ -282,6 +296,10 @@
                         Сверка 150 посадочных страниц</div>
                     <div class="ceo-price__block-price">12 900₽</div>
                     <div class="ceo-price__block-add">Срок 5 рабочих дней.</div>
+                    <div class="ceo-price__block-media">
+                        <div class="ceo-price__block-price-media">12 900₽</div>
+                        <div class="ceo-price__block-add-media">Срок 5 рабочих дня.</div>
+                    </div>
                 </li>
                 <li class="ceo-price__block-item">
                     <div class="ceo-price__block-key">ОПТИМАЛЬНЫЙ</div>
@@ -292,6 +310,10 @@
                         Сверка 500 посадочных страниц</div>
                     <div class="ceo-price__block-price">21 900₽</div>
                     <div class="ceo-price__block-add">Срок 7 рабочих дней.</div>
+                    <div class="ceo-price__block-media">
+                        <div class="ceo-price__block-price-media">21 900₽</div>
+                        <div class="ceo-price__block-add-media">Срок 7 рабочих дня.</div>
+                    </div>
                 </li>
             </ul>
         </div>
