--- a/#src/mailing.html
+++ b/#src/mailing.html
@@ -239,6 +239,10 @@
                         Предоставляем отчёт</div>
                     <div class="mail-price__block-price">0.1₽</div>
                     <div class="mail-price__block-add">email сообщение</div>
+                    <div class="mail-price__block-media">
+                        <div class="mail-price__block-price-media">3.5₽</div>
+                        <div class="mail-price__block-add-media">сообщение</div>
+                    </div>
                 </li>
                 <li class="mail-price__block-item">
                     <div class="mail-price__block-key">МЕССЕНДЖЕРЫ</div>
@@ -249,6 +253,10 @@
                         Предоставляем отчёт</div>
                     <div class="mail-price__block-price">2.99₽</div>
                     <div class="mail-price__block-add">сообщение</div>
+                    <div class="mail-price__block-media">
+                        <div class="mail-price__block-price-media">3.5₽</div>
+                        <div class="mail-price__block-add-media">сообщение</div>
+                    </div>
                 </li>
                 <li class="mail-price__block-item">
                     <div class="mail-price__block-key">IMESSAGE</div>
@@ -259,6 +267,10 @@
                         Предоставляем отчёт</div>
                     <div class="mail-price__block-price">3.5₽</div>
                     <div class="mail-price__block-add">сообщение</div>
+                    <div class="mail-price__block-media">
+                        <div class="mail-price__block-price-media">3.5₽</div>
+                        <div class="mail-price__block-add-media">сообщение</div>
+                    </div>
                 </li>
             </ul>
         </div>
