--- a/#src/optimization.html
+++ b/#src/optimization.html
@@ -12,24 +12,22 @@
     <!-- Стили -->
     <link rel="stylesheet" href="css/style.min.css">
 
-        <!-- Библиотеки анимации WOW -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css"/>
-        <script src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js"></script>
+    <!-- Библиотеки анимации WOW -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css"/>
+    <script src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js"></script>
 
-        <!-- Библиотеки анимации GSAP -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- Библиотеки анимации GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-        <!-- Дополнительные инструменты -->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Дополнительные инструменты -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-        <!-- Слайдер - стили .css -->
-        <!-- <link rel="stylesheet" href="add/swiper 6.4.5.css"> -->
-        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!-- Слайдер - стили .css -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
-        <!-- Слайдер - скрипты .js -->
-        <!-- <script src="add/swiper 6.4.5.js"></script> -->
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Слайдер - скрипты .js -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <body>
 <section class="opt-header"> 
@@ -360,10 +358,22 @@
         <div class="opt-promotion__text-add">Наши проекты</div>
         <div class="opt-promotion__text-title"><span>Примеры</span> наших <span>работ</span></div>
     </div>
+
+    <div class="c-promotion__media">
+        <div class="c-promotion__media-container">
+            <select id="promotion">
+                <option value="E-commerce" rel="icon-temperature">E-commerce</option>
+                <option value="Промо">Промо </option>
+                <option value="Брендинг">Брендинг</option>
+                <option value="Корпоративный">Корпоративный</option>
+                <option value="Сервис">Сервис</option>
+                <option value="Архив">Архив</option>
+            </select> 
+        </div>
+    </div>
     
     <div class="dws-wrapper">
         <div class="dws-form">
-            <!-- Вкладки на CSS -->
             <input type="radio" id="tab-1" name="tabs" checked>
             <label class="tab tab-1" for="tab-1" title="Вкладка 1">E-commerce</label>
     
