--- a/#src/rec.html
+++ b/#src/rec.html
@@ -12,24 +12,22 @@
     <!-- Стили -->
     <link rel="stylesheet" href="css/style.min.css">
 
-        <!-- Библиотеки анимации WOW -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css"/>
-        <script src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js"></script>
+    <!-- Библиотеки анимации WOW -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css"/>
+    <script src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js"></script>
 
-        <!-- Библиотеки анимации GSAP -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- Библиотеки анимации GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-        <!-- Дополнительные инструменты -->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Дополнительные инструменты -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-        <!-- Слайдер - стили .css -->
-        <!-- <link rel="stylesheet" href="recd/swiper 6.4.5.css"> -->
-        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!-- Слайдер - стили .css -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
-        <!-- Слайдер - скрипты .js -->
-        <!-- <script src="recd/swiper 6.4.5.js"></script> -->
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Слайдер - скрипты .js -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <body>
 <section class="rec-header"> 
@@ -240,6 +238,18 @@
             <label class="rec-skill__tab " title="Вкладка 5">Написание обьявлений</label>
             <label class="rec-skill__tab " title="Вкладка 6">Запуск рекламы</label>
         </div>
+        <div class="rec-skills__media">
+            <div class="rec-skills__media-container">
+                <select id="rea-skills">
+                    <option value="E-commerce" rel="icon-temperature">Изучаем рынок</option>
+                    <option value="Промо">Анализ сайта</option>
+                    <option value="Брендинг">Правки на сайте</option>
+                    <option value="Корпоративный">Подбор запросов</option>
+                    <option value="Сервис">Написание обьявлений</option>
+                    <option value="Архив">Запуск рекламы</option>
+                </select> 
+            </div>
+        </div>
     
         <div class="skills__content">
             <div id="form-1" class="rec-skill__tab-form rec-skills__active">
@@ -247,7 +257,6 @@
                     <div class="rec-skills__block">
                         <div class="rec-skills__block-title">Смотрим <br> конкурентов</div>
                         <div class="rec-skills__block-text">Перед тем, как начать разрабатывать концепт для подачи контекстной рекламы на ваш сайт, нужно детально изучить текущие предложения конкурентов. Это нужно для того, чтобы выделить их преимущества и слабые места.
-        
                             Учитывая “косяки” в рекламе конкурента, мы имеем возможность сделать объявление более привлекательным для вашего клиента.</div>
                         <div class="rec-skills__list-btn">
                             <a href="#">
@@ -411,6 +420,10 @@
                         Написание оъявлений</div>
                     <div class="rec-price__block-price">20 000₽</div>
                     <div class="rec-price__block-add">Первоночально</div>
+                    <div class="rec-price__block-media">
+                        <div class="rec-price__block-price-media">20 000₽</div>
+                        <div class="rec-price__block-add-media">Первоночально</div>
+                    </div>
                 </li>
                 <li class="rec-price__block-item">
                     <div class="rec-price__block-key">Ведение</div>
@@ -421,6 +434,10 @@
                         Консультации</div>
                     <div class="rec-price__block-price">15 000₽</div>
                     <div class="rec-price__block-add">В месяц</div>
+                    <div class="rec-price__block-media">
+                        <div class="rec-price__block-price-media">20 000₽</div>
+                        <div class="rec-price__block-add-media">Первоночально</div>
+                    </div>
                 </li>
                 <li class="rec-price__block-item">
                     <div class="rec-price__block-key">Бюджет</div>
@@ -431,6 +448,10 @@
                         значение оптимальным.</div>
                     <div class="rec-price__block-price">от 20 000₽</div>
                     <div class="rec-price__block-add">В месяц</div>
+                    <div class="rec-price__block-media">
+                        <div class="rec-price__block-price-media">20 000₽</div>
+                        <div class="rec-price__block-add-media">Первоночально</div>
+                    </div>
                 </li>
             </ul>
         </div>
