--- a/#src/seotraff.html
+++ b/#src/seotraff.html
@@ -12,24 +12,22 @@
     <!-- Стили -->
     <link rel="stylesheet" href="css/style.min.css">
 
-        <!-- Библиотеки анимации WOW -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css"/>
-        <script src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js"></script>
+    <!-- Библиотеки анимации WOW -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css"/>
+    <script src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js"></script>
 
-        <!-- Библиотеки анимации GSAP -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- Библиотеки анимации GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-        <!-- Дополнительные инструменты -->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Дополнительные инструменты -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-        <!-- Слайдер - стили .css -->
-        <!-- <link rel="stylesheet" href="add/swiper 6.4.5.css"> -->
-        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!-- Слайдер - стили .css -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
-        <!-- Слайдер - скрипты .js -->
-        <!-- <script src="add/swiper 6.4.5.js"></script> -->
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Слайдер - скрипты .js -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <body>
 <section class="seo-header"> 
@@ -440,8 +438,8 @@
                 </li>
                 <li class="seo-result__block-item">
                     <div class="seo-result__block-media">
-                        <div class="seo-result__block-number-media">1</div>
-                        <div class="seo-result__block-text-media">Первые результаты</div>
+                        <div class="seo-result__block-number-media">2</div>
+                        <div class="seo-result__block-text-media">Активный рост</div>
                     </div>
                     <div class="seo-result__block-number">2</div>
                     <div class="seo-result__block-text">Активный рост</div>
@@ -449,8 +447,8 @@
                 </li>
                 <li class="seo-result__block-item">
                     <div class="seo-result__block-media">
-                        <div class="seo-result__block-number-media">1</div>
-                        <div class="seo-result__block-text-media">Первые результаты</div>
+                        <div class="seo-result__block-number-media">3</div>
+                        <div class="seo-result__block-text-media">Результат ТОП 3</div>
                     </div>
                     <div class="seo-result__block-number">3</div>
                     <div class="seo-result__block-text">Результат ТОП 3</div>
