--- a/#src/smm.html
+++ b/#src/smm.html
@@ -12,24 +12,22 @@
     <!-- Стили -->
     <link rel="stylesheet" href="css/style.min.css">
 
-        <!-- Библиотеки анимации WOW -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css"/>
-        <script src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js"></script>
+    <!-- Библиотеки анимации WOW -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css"/>
+    <script src="https://cdn.rawgit.com/matthieua/WOW/1.0.1/dist/wow.min.js"></script>
 
-        <!-- Библиотеки анимации GSAP -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <!-- Библиотеки анимации GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-        <!-- Дополнительные инструменты -->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Дополнительные инструменты -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-        <!-- Слайдер - стили .css -->
-        <!-- <link rel="stylesheet" href="add/swiper 6.4.5.css"> -->
-        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!-- Слайдер - стили .css -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
-        <!-- Слайдер - скрипты .js -->
-        <!-- <script src="add/swiper 6.4.5.js"></script> -->
-        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Слайдер - скрипты .js -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <body>
 <section class="smm-header"> 
@@ -170,6 +168,10 @@
                         Сверка 50 посадочных страниц</div>
                     <div class="smm-price__block-price">5 900₽</div>
                     <div class="smm-price__block-add">Срок 3 рабочих дня.</div>
+                    <div class="smm-price__block-media">
+                        <div class="smm-price__block-price-media">45 000₽</div>
+                        <div class="smm-price__block-add-media">в месяц</div>
+                    </div>
                 </li>
                 <li class="smm-price__block-item">
                     <div class="smm-price__block-key">РАСШИРЕННЫЙ</div>
@@ -180,6 +182,10 @@
                         Сверка 50 посадочных страниц</div>
                     <div class="smm-price__block-price">12 900₽</div>
                     <div class="smm-price__block-add">Срок 5 рабочих дней.</div>
+                    <div class="smm-price__block-media">
+                        <div class="smm-price__block-price-media">45 000₽</div>
+                        <div class="smm-price__block-add-media">в месяц</div>
+                    </div>
                 </li>
                 <li class="smm-price__block-item">
                     <div class="smm-price__block-key">ОПТИМАЛЬНЫЙ</div>
@@ -190,6 +196,10 @@
                         Сверка 50 посадочных страниц</div>
                     <div class="smm-price__block-price">21 900₽</div>
                     <div class="smm-price__block-add">Срок 7 рабочих дней.</div>
+                    <div class="smm-price__block-media">
+                        <div class="smm-price__block-price-media">45 000₽</div>
+                        <div class="smm-price__block-add-media">в месяц</div>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -209,16 +219,8 @@
                                 <div class="smm-people__slide-name">Артур Кузнецов</div>
                                 <div class="smm-people__slide-text">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
                             </div>
-                            <div class="smm-people__slide-image">
-                                <img src="./img/smm/people-1.png" alt="">
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="smm-people__slide-block">
-                                <div class="smm-people__slide-title">Мы работаем <br>
-                                    над развитием аккаунта</div>
-                                <div class="smm-people__slide-name">Артур Кузнецов</div>
-                                <div class="smm-people__slide-text">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
+                            <div class="smm-people__slide-media">
+                                <div class="smm-people__slide-text-media">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
                             </div>
                             <div class="smm-people__slide-image">
                                 <img src="./img/smm/people-1.png" alt="">
@@ -231,16 +233,8 @@
                                 <div class="smm-people__slide-name">Артур Кузнецов</div>
                                 <div class="smm-people__slide-text">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
                             </div>
-                            <div class="smm-people__slide-image">
-                                <img src="./img/smm/people-1.png" alt="">
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="smm-people__slide-block">
-                                <div class="smm-people__slide-title">Мы работаем <br>
-                                    над развитием аккаунта</div>
-                                <div class="smm-people__slide-name">Артур Кузнецов</div>
-                                <div class="smm-people__slide-text">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
+                            <div class="smm-people__slide-media">
+                                <div class="smm-people__slide-text-media">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
                             </div>
                             <div class="smm-people__slide-image">
                                 <img src="./img/smm/people-1.png" alt="">
@@ -252,6 +246,37 @@
                                     над развитием аккаунта</div>
                                 <div class="smm-people__slide-name">Артур Кузнецов</div>
                                 <div class="smm-people__slide-text">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
+                            </div>
+                            <div class="smm-people__slide-media">
+                                <div class="smm-people__slide-text-media">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
+                            </div>
+                            <div class="smm-people__slide-image">
+                                <img src="./img/smm/people-1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="smm-people__slide-block">
+                                <div class="smm-people__slide-title">Мы работаем <br>
+                                    над развитием аккаунта</div>
+                                <div class="smm-people__slide-name">Артур Кузнецов</div>
+                                <div class="smm-people__slide-text">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
+                            </div>
+                            <div class="smm-people__slide-media">
+                                <div class="smm-people__slide-text-media">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
+                            </div>
+                            <div class="smm-people__slide-image">
+                                <img src="./img/smm/people-1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="smm-people__slide-block">
+                                <div class="smm-people__slide-title">Мы работаем <br>
+                                    над развитием аккаунта</div>
+                                <div class="smm-people__slide-name">Артур Кузнецов</div>
+                                <div class="smm-people__slide-text">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
+                            </div>
+                            <div class="smm-people__slide-media">
+                                <div class="smm-people__slide-text-media">Актуализация! Да, без нее никуда. Каждый день социальные сети применяют новые алгоритмы показа "реков" и прочих записей по интересам. Я мониторю каждую новую выходку социальной сети.</div>
                             </div>
                             <div class="smm-people__slide-image">
                                 <img src="./img/smm/people-1.png" alt="">
