--- a/#src/rec.html
+++ b/#src/rec.html
@@ -55,7 +55,8 @@
         <div class="rec-header__container">
             <div class="rec-header__info">
                 <div class="rec-header__info-add">Digital агентство</div>
-                <div class="rec-header__info-title"><span>Правильное SEO </span><br>1-е место в рейтинге </div>
+                <div class="rec-header__info-title">Контекстная 
+                    <span>реклама</span></div>
                 <div class="rec-header__info-text">Увидим то, что сможет перевернуть игру <br>и выйти на новый уровень</div>
                 <div class="rec-header__info-btn-container">
                     <a href="#">
