--- a/#src/ceo.html
+++ b/#src/ceo.html
@@ -56,7 +56,8 @@
             <div class="ceo-header__info">
                 <div class="ceo-header__info-add">Проектная аналитика трафика</div>
                 <div class="ceo-header__info-title"><span>СЕО аналитика</span> трафика на ваш сайт</div>
-                <div class="ceo-header__info-text">Увидим то, что сможет перевернуть игру <br>и выйти на новый уровень</div>
+                <div class="ceo-header__info-text">Увидеть то, <br>
+                    что сделает ваш бизнес успешным.</div>
                 <div class="ceo-header__info-btn-container">
                     <a href="#">
                         <button class="ceo-header__info-btn">Найти точки роста
