--- a/#src/optimization.html
+++ b/#src/optimization.html
@@ -56,7 +56,8 @@
             <div class="opt-header__info">
                 <div class="opt-header__info-add">Проектная аналитика трафика</div>
                 <div class="opt-header__info-title">Комплексная CEO <span>оптимизация</span></div>
-                <div class="opt-header__info-text">Увидим то, что сможет перевернуть игру <br>и выйти на новый уровень</div>
+                <div class="opt-header__info-text">Увидеть то, <br>
+                    что сделает ваш бизнес успешным.</div>
                 <div class="opt-header__info-btn-container">
                     <a href="#">
                         <button class="opt-header__info-btn">Найти точки роста
