--- a/#src/rec.html
+++ b/#src/rec.html
@@ -57,7 +57,8 @@
                 <div class="rec-header__info-add">Digital агентство</div>
                 <div class="rec-header__info-title">Контекстная 
                     <span>реклама</span></div>
-                <div class="rec-header__info-text">Увидим то, что сможет перевернуть игру <br>и выйти на новый уровень</div>
+                <div class="rec-header__info-text">Клиенты на ваш сайт уже сегодня. Google и Яндекс <br>
+                    работает на Вас!</div>
                 <div class="rec-header__info-btn-container">
                     <a href="#">
                         <button class="rec-header__info-btn">Найти точки роста
