--- a/#src/seotraff.html
+++ b/#src/seotraff.html
@@ -56,7 +56,8 @@
             <div class="seo-header__info">
                 <div class="seo-header__info-add">Digital агентство</div>
                 <div class="seo-header__info-title"><span>Правильное SEO </span><br>1-е место в рейтинге </div>
-                <div class="seo-header__info-text">Увидим то, что сможет перевернуть игру <br>и выйти на новый уровень</div>
+                <div class="seo-header__info-text">Увидеть то, <br>
+                    что сделает ваш бизнес успешным.</div>
                 <div class="seo-header__info-btn-container">
                     <a href="#">
                         <button class="seo-header__info-btn">Найти точки роста
